--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     </head>
         <body>
             <h1>Matheus Segati</h1>
+            <h2>Goiânia</h2>
+            <h2>Goiás</h2>
         </body>
 </html>
